# QuoridorCore

./: CMakeLists.txt
plugins/: CMakeLists.txt
plugins/a_plugin/src/: Board.cpp
plugins/vc_plugin/: CMakeLists.txt
plugins/vc_plugin/include/: VCPlayer.h
plugins/vc_plugin/src/: PlayerRegistration.cpp  VCPlayer.cpp
qcli/: CMakeLists.txt
qcli/include/: ConsoleApp.h
qcli/src/: main.cpp
qcore/include/: BoardState.h  Game.h  GameController.h  PlayerAction.h
qcore/src/: BoardState.cpp  GameController.cpp  Player.cpp  PlayerAction.cpp  PluginManager.cpp
